--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ out/
 
 ### MAC ###
 .DS_Store
+
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
