--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
     properties:
       hibernate:
@@ -16,7 +16,7 @@ spring:
         show_sql: true
         use_sql_comments: false
       defer-datasource-initialization: true
-      
+
 logging:
   level:
     org.springframework.jdbc.core.JdbcTemplate: DEBUG
