--- a/high_traffic_consumer1/src/main/resources/application.yml
+++ b/high_traffic_consumer1/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   profiles:
     active: local
@@ -13,6 +16,7 @@ spring:
       database: 1
 
   jpa:
+    show-sql: false
     hibernate:
       ddl-auto: update
 
@@ -23,11 +27,16 @@ spring:
         use_sql_comments: false
       defer-datasource-initialization: true
 
+
 logging:
   level:
-    org.springframework.jdbc.core.JdbcTemplate: DEBUG
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.hibernate.SQL: off
+    org.hibernate.type.descriptor.sql: off
+#logging:
+#  level:
+#    org.springframework.jdbc.core.JdbcTemplate: DEBUG
+#    org.hibernate.SQL: DEBUG
+#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 #      cache:
 #        use_second_level_cache: false
 #        use_query_cache: false
