--- a/high_traffic_coupon_consumer/src/main/resources/application.yml
+++ b/high_traffic_coupon_consumer/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
 
     properties:
       hibernate:
