--- a/high_traffic/src/main/resources/application.yml
+++ b/high_traffic/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
   datasource:
-    url: jdbc:mariadb://localhost:3308/high_traffic?rewriteBatchedStatements=true&profileSQL=true&maxQuerySizeToLog=0
+    url: jdbc:mariadb://localhost:3308/high_traffic??maxAllowedPacket=67108864&rewriteBatchedStatements=true&profileSQL=true&maxQuerySizeToLog=0
     username: root
     password: root
   data:
@@ -14,7 +14,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
     properties:
       hibernate:
