CQRS 커맨드 모델, 데이터 파이프 라인 구축

--- a/high_traffic_cqrs_query_model/build.gradle
+++ b/high_traffic_cqrs_query_model/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
+    // jackson
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.1'
 }
 
 tasks.named('test') {
