--- a/high_traffic_cqrs_query_model/src/main/resources/application.yml
+++ b/high_traffic_cqrs_query_model/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       database: high_traffic_lab
       username: root
       password: root
+      authentication-database: admin
   
   jpa:
     hibernate:
