--- a/high_traffic/build.gradle
+++ b/high_traffic/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
+    // jackson
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.1'
+
 }
 
 tasks.named('test') {
